# sovradb

./: B2B_CLIENT_CONNECTION_GUIDE.md  CONTEXT.md  README.md  RULE.md  SYSTEMATICDEVELOPMENT.md  scratch.js
analytics_observer/: 03_federated_analytics.sql  03_federated_analytics.sql.bak
control_plane/: 03_temporal_tables_setup.sql  04_enable_rls.sql  05_sovra_control_schema.sql  06_default_partition.sql  07_create_api_role.sql  08_cryptographic_obfuscation.sql  09_application_tables.sql  09_fix_sovereign_schema_and_views.sql  10_platform_admins.sql
edge_sync/: 02_logical_replication_setup.sql  docker-compose.yml
edge_sync/config/: sync_rules.yml
frontend_workbench/: package-lock.json  package.json
frontend_workbench/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
frontend_workbench/src/app/admin/: AdminManager.tsx  page.tsx
frontend_workbench/src/app/admin/admins/: page.tsx
frontend_workbench/src/app/admin/login/: page.tsx
frontend_workbench/src/app/admin/nodes/: page.tsx
frontend_workbench/src/app/admin/traffic/: LiveTrafficFeed.tsx  page.tsx
frontend_workbench/src/app/admin/vaults/: page.tsx
frontend_workbench/src/app/studio/: page.tsx
frontend_workbench/src/app/studio/branches/: page.tsx
frontend_workbench/src/app/studio/local-first/: page.tsx
frontend_workbench/src/app/studio/rules/: fpe-toggle.tsx  page.tsx
frontend_workbench/src/app/studio/schema/: page.tsx
frontend_workbench/src/app/studio/settings/: page.tsx
frontend_workbench/src/app/studio/sql/: page.tsx
frontend_workbench/src/components/: PowerSyncProvider.tsx  app-sidebar.tsx  client-shell.tsx
frontend_workbench/src/components/ui/: table.tsx
frontend_workbench/src/lib/: db.ts
frontend_workbench/src/lib/powersync/: AppSchema.ts  PowerSync.ts
gateway/: Cargo.toml
gateway/scripts/: download_geolite2.sh
gateway/src/: fpe.rs  geo_router.rs  main.rs  parser.rs  proxy.rs  tls.rs  tokenization.rs
obfuscation_engine/: 01_cryptographic_rules.sql  02_control_plane_fpe_registry.sql  03_static_masking_staging.sql
sovereign_gateway/: Cargo.toml  SUPERSEDED.md
sovereign_gateway/src/: main.rs
sovereign_gateway/src/crypto/: fpe.rs  mod.rs
storage_fabric/: 00_init_dirs.sh  00_init_tablespaces.sql  01_geo_partitioned_schema.sql  02_tde_setup.sql  03_spock_setup.sql  Dockerfile  docker-compose.yml
(+2 files in other folders)
